fixed shown count, added functionality that allows the number of survey options displayed to be dependent on a single javascript variable, per stretch goals

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
 
 
+
+
+
 img {
     max-height: 200px;
     max-width: 200px;
+}
+
+p {
+    font-family: Arial;
 }
